--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
     "require": {
         "php": "^8.0.2",
         "laravel/framework": "^9.19",
-        "guzzlehttp/guzzle": "^7.5"
+        "guzzlehttp/guzzle": "^7.5",
+        "maatwebsite/excel": "3.1.x-dev"
     }
 }
