--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
             "name": "edythawne"
         }
     ],
-    "minimum-stability": "dev",
+    "minimum-stability": "stable",
     "require": {
         "php": "^8.0.2",
         "laravel/framework": "^10.0",
