--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,6 @@
         "php": "^8.0.2",
         "laravel/framework": "^10.0",
         "guzzlehttp/guzzle": "^7.5",
-        "maatwebsite/excel": "3.1.x-dev"
+        "maatwebsite/excel": "3.1.48"
     }
 }
